--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,12 +131,12 @@ h6 {
 # Global Header
 --------------------------------------------------------------*/
 .header {
-  color: var(--default-color);
-  background-color: var(--background-color);
+  color: url('assets/img/fg.jpg');
+  background-color: url('assets/img/fg.jpg');
   padding: 20px 0;
   transition: all 0.5s;
   z-index: 997;
-  border-bottom: 1px solid var(--background-color);
+  border-bottom: 1px solid url('assets/img/fg.jpg');
 }
 
 .header .logo {
@@ -145,7 +145,7 @@ h6 {
 
 .header .logo img {
   max-height: 36px;
-  margin-right: 8px;
+  margin-right: 8px; 
 }
 
 .header .logo h1 {
